# PythonDOK

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py
src/PDOK_clients/: metadata.py  nwb_wegen.py  pdok_client.py
tests/: test_pdok_client_crs.py  test_pdok_client_helpers.py
