[project]
name = "pythonDOK"
version = "0.0.1"
description = "Supporting the PDOK API via python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "pydantic-geojson>=0.3.2",
    "pyogrio>=0.12.1",
    "pyproj>=3.7.2",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
xfail_strict = true
addopts = [
    "-vv",
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--showlocals",
]
